remove special handling for rows with rowspans as table frames report now the overflow area. bug 240275 r/sr=roc